61: Remove List.of (java 9)